@@ -1,0 +1,18 @@
+package com.robertx22.mine_and_slash.new_content.registry.groups;
+
+import java.util.Arrays;
+import java.util.List;
+
+public class MiscGroup extends RoomGroup {
+
+    public MiscGroup() {
+        super("misc", 10);
+    }
+
+    @Override
+    public List<RoomGroup> possibleOtherTypes() {
+        return Arrays.asList();
+    }
+}
+
+
