@@ -1,7 +1,7 @@
 package com.robertx22.mine_and_slash.new_content.registry.rooms.adders;
 
-import com.robertx22.mine_and_slash.new_content.enums.RoomGroup;
 import com.robertx22.mine_and_slash.new_content.enums.RoomType;
+import com.robertx22.mine_and_slash.new_content.registry.groups.RoomGroup;
 import com.robertx22.mine_and_slash.new_content.registry.rooms.base.BaseRoomAdder;
 
 public class BrickRoomAdder extends BaseRoomAdder {
