@@ -1,13 +1,13 @@
 package com.robertx22.mine_and_slash.new_content.registry.rooms.adders;
 
-import com.robertx22.mine_and_slash.new_content.enums.RoomGroup;
 import com.robertx22.mine_and_slash.new_content.enums.RoomType;
+import com.robertx22.mine_and_slash.new_content.registry.groups.RoomGroup;
 import com.robertx22.mine_and_slash.new_content.registry.rooms.base.BaseRoomAdder;
 
 public class MineRoomAdder extends BaseRoomAdder {
 
     public MineRoomAdder() {
-        super(RoomGroup.MINE);
+        super(RoomGroup.MINESHAFT);
     }
 
     @Override
