@@ -1,7 +1,7 @@
 package com.robertx22.mine_and_slash.new_content.registry.rooms.adders;
 
-import com.robertx22.mine_and_slash.new_content.enums.RoomGroup;
 import com.robertx22.mine_and_slash.new_content.enums.RoomType;
+import com.robertx22.mine_and_slash.new_content.registry.groups.RoomGroup;
 import com.robertx22.mine_and_slash.new_content.registry.rooms.base.BaseRoomAdder;
 
 public class SandstoneRoomAdder extends BaseRoomAdder {
@@ -15,7 +15,7 @@ public class SandstoneRoomAdder extends BaseRoomAdder {
 
         add("boss_and_skellies", RoomType.END);
 
-        add("treasure0", RoomType.FOUR_WAY);
+        add("treasure0", RoomType.FOUR_WAY).weight(200);
 
         add("treasure_lava_pyramid", RoomType.STRAIGHT_HALLWAY);
 
